<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Radio</string>
    <string name="mhz">MHz</string>
    <string name="khz">kHz</string>
    <string name="fm1">FM1</string>
    <string name="fm2">FM2</string>
    <string name="action_settings">Settings</string>
    <string name="am">AM</string>
    <string name="fine">Fine</string>
    <string name="step">Step</string>
    <string name="auto">Auto</string>
    <string name="start_scan">Scanning from %s&#8230;</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="radio_volume">Radio-Volume</string>
    <string name="fmsearch">Start searching the FM band frequency?</string>
    <string name="amsearch">Start searching the AM band frequency?</string>
    <string name="import_title">Import-Preset</string>
    <string name="import_preset">Preset</string>
    <string name="import_define">Define</string>
    <string name="import_area">Area</string>
    <string name="import_province">Province</string>
    <string name="import_city">City</string>
    <string name="edit_dialog_freq">Freq</string>
    <string name="edit_dialog_shortname">Short</string>
    <string name="edit_dialog_fullname">Full</string>
    <string name="import_import">Import</string>
    <string name="playing">Playing</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="valid_freq_fm">Please Enter Valid FM Freq：87.5-108.0MHz</string>
    <string name="valid_freq_am">Please Enter Valid AM Freq：520-1710KHz</string>
    <string name="searchwait">Searching Now, Please Wait...</string>
    <string name="china">China</string>
    <string name="japan">Japan</string>
    <string name="europe">Europe</string>
    <string name="ITURegion1">ITU Region 1 (Europe and Africa)</string>
    <string name="ITURegion2">ITU Region 2 (North/South Americas)</string>
    <string name="ITURegion3">ITU Region 3 (Australia and Asia)</string>
    <string name="layout1">New Layout</string>
    <string name="layout2">Original Layout</string>
    <string name="layout3">Custom Layout</string>
    <string name="save_colors">Save Color Scheme</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="brt">Brightness</string>
    <string name="con">Contrast</string>
    <string name="sat">Saturation</string>
    <string name="hue">Hue</string>
    <string name="system">Type Selection</string>
    <string name="layout">Layout Selection</string>
    <string name="volume">Volume</string>
    <string name="remote">Remote Control</string>
    <string name="lead">Lead</string>
    <string name="remind">Remind</string>
    <string name="describe">Continue with Automatic Search And Save?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="searching">Searching Now, Do Not Switch The Channel</string>
    <string name="clear">Clear</string>
    <string name="unrealized">Function to achieve</string>
    <string name="clear_content">Whether to remove the current list?</string>
    <string name="invalid">Please Switch to the channel effectively</string>
    <string name="nowhere">No available slots remaining</string>
    <string name="samefreq">have a same freq,do not save again</string>
    <string name="no_reminds">Next time no longer prompt</string>
    <string name="addHeart">addHeart</string>
    <string name="is_addHeart_toast">Has been added to the collection</string>
    <string name="same_addHeart_toast">Collection already has this frequency</string>
    <string name="clear_single_channel">Clear the currently selected channel info?</string>
    <string name="clear_addHeart_toast">Frequency has been dropped from the collection</string>
    <string name="not_effective_freq">Not effective frequency</string>
    <string name="volume_change">Volume</string>
    <string name="volume_change_info">Click here</string>
    <string name="remote_info">Choose remote model</string>
    <string name="remote_checked">Check the open</string>
    <string name="lead_info">Import channel list</string>
    <string name="system_choose">Choose your area</string>
    <string name="layout_choose">Choose your design</string>
    <string name="system_choose_title">Please select your region</string>
    <string name="layout_choose_title">Please select a Design</string>
    <string name="widget_loading">Loading...</string>

    <string name="scan">Scan</string>
    <string name="pref_scan_delay">Scan delay</string>
    <string name="scan_delay_1">1 second</string>
    <string name="scan_delay_2">2 seconds</string>
    <string name="scan_delay_3">3 seconds</string>
    <string name="scan_delay_5">5 seconds</string>
    <string name="scan_delay_7">7 seconds</string>
    <string name="scan_delay_10">10 seconds</string>

</resources>