<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topPanel"
        android:background="@drawable/top_bg_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageView
        android:id="@+id/midPanel"
        android:background="@drawable/buttonbar_bg_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.42">
    </ImageView>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:baselineAligned="false"
        android:background="@drawable/bottom_bg_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alpha"/>
            <SeekBar
                android:id="@+id/alphabar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="255" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"/>
            <SeekBar
                android:id="@+id/redbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>
            <SeekBar
                android:id="@+id/greenbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>
            <SeekBar
                android:id="@+id/bluebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brt"/>
            <SeekBar
                android:id="@+id/brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/con"/>
            <SeekBar
                android:id="@+id/contrast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"/>
            <SeekBar
                android:id="@+id/saturation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hue"/>
            <SeekBar
                android:id="@+id/hue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="0"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnColorSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_colors"
            android:layout_gravity="bottom"
            android:layout_weight="1.2"/>

    </LinearLayout>
</LinearLayout>
