<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/import_title_layout" android:background="@drawable/title_bar" android:layout_width="wrap_content" android:layout_height="56.0dip">
        <ImageButton android:id="@id/import_button_close" android:background="@drawable/btnclose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/import_middle_layout" android:background="@drawable/importbg" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="0.39">
        <Button android:textSize="32.0sp" android:textColor="@*android:color/white" android:id="@id/import_button_area" android:background="@drawable/import_middle_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/import_area" android:drawableLeft="@drawable/import_country" android:drawablePadding="10.0dip" />
        <Button android:textSize="30.0sp" android:textColor="@*android:color/white" android:id="@id/import_button_province" android:background="@drawable/import_middle_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="19.0dip" android:layout_marginTop="5.0dip" android:text="@string/import_province" android:drawableLeft="@drawable/import_province" android:drawablePadding="10.0dip" android:layout_below="@id/import_button_area" />
        <Button android:textSize="28.0sp" android:textColor="@*android:color/white" android:id="@id/import_button_city" android:background="@drawable/import_middle_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="10.0dip" android:text="@string/import_city" android:drawableLeft="@drawable/import_city" android:drawablePadding="10.0dip" android:layout_below="@id/import_button_province" />
        <ListView android:scrollbarSize="27.0dip" android:scrollbarStyle="outsideOverlay" android:id="@id/import_list_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="110.0dip" android:layout_marginTop="2.0dip" android:cacheColorHint="#00000000" android:divider="#ff000000" android:layout_toRightOf="@id/import_button_area" android:headerDividersEnabled="false" android:footerDividersEnabled="false" android:scrollbarFadeDuration="3000" android:scrollbarDefaultDelayBeforeFade="2000" android:fadeScrollbars="true" />
        <Button android:textSize="30.0sp" android:textColor="@*android:color/white" android:id="@id/import_button_import" android:background="@drawable/import_bottom_btn" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/import_import" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>