<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/btnclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/btnclose" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.55"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.51"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <ImageButton
                    android:id="@+id/btnbackward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btnfinebackward" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/radiotype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <include
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        layout="@layout/channel_display_ui" />

                    <TextView
                        android:id="@+id/channeldetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/radiohz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp" />

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <ImageButton
                    android:id="@+id/btnforward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btnfineforward" >
                </ImageButton>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center_horizontal" >

            <Button
                android:id="@+id/btncollect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btncollect_heart" />

            <Button
                android:id="@+id/btnfine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine"
                android:text="@string/fine"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine"
                android:text="@string/step"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnauto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine"
                android:text="@string/auto"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btncollect_save" />

            <Button
                android:id="@+id/btnclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnclear" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnfm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btnbottom" />


                
            <Button
                android:id="@+id/btnam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btnbottonam" />

            <Button
                android:id="@+id/collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btncollect" />

            <Button
                android:id="@+id/btnsetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/setting" />
                
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <include
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                layout="@layout/scroll" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>