<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="@drawable/top_bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btnclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/btnclose" />
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <ImageButton
                    android:id="@+id/btnbackward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btnfinebackward1" />
            </RelativeLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/radiotype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <include
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        layout="@layout/channel_display_ui" />

                    <TextView
                        android:id="@+id/channeldetails"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2.3"
                        android:textSize="15sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/radiohz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp" />

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <ImageButton
                    android:id="@+id/btnforward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btnfineforward1" >
                </ImageButton>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:background="@drawable/top_button_bar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.42"
            android:gravity="center" >

            <Button
                android:id="@+id/btncollect"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btncollect_heart" />

            <Button
                android:id="@+id/btnfine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine1"
                android:text="@string/fine"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnstep"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine1"
                android:text="@string/step"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnauto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnfine1"
                android:text="@string/auto"
                android:textColor="@color/solid_white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnsave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btncollect_save1" />

            <Button
                android:id="@+id/btnclear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnclear1" />
        </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:background="@drawable/bottom_bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".85"
         >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical"
            android:layout_marginEnd="5dp" >

            <Button
                android:id="@+id/btnfm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btnbottom1" />

            <Button
                android:id="@+id/btnam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btnbottonam1" />

            <Button
                android:id="@+id/collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btncollect1" />

            <Button
                android:id="@+id/btnsetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/setting1" />
        </LinearLayout>

            <include
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                layout="@layout/scroll1" />

    </LinearLayout>
</LinearLayout>
